Fix login page (#10)
* Remove scrollbar

* Update error handling on login and register

Changed error handling logic on register.
 - Check if re_password matches after checking student id
 - Check if the student ID is within valid nubmer range

Updated login input form.
 - Change error box from input to p tag
 - Change studentid-register input type to number and set range
 - Update loginstyle.css to hide spin box

* Cleanup code

* Show registration page directly on error (#3)

* Update .gitignore

--- a/jamsinhs/polls/static/css/loginstyle.css
+++ b/jamsinhs/polls/static/css/loginstyle.css
@@ -3,13 +3,16 @@
     padding: 0;
     font-family: sans-serif;
 }
+
 .wrap {
     height: 100%;
     width: 100%;
     background-position: center;
     background-size: cover;
     position: absolute;
+    overflow: hidden;
 }
+
 .form-wrap {
     width: 570px;
     height: 720px;
@@ -19,6 +22,7 @@
     padding: 7.5px;
     overflow: hidden;
 }
+
 .button-wrap {
     width: 345px;
     margin: 52.5px auto;
@@ -26,6 +30,7 @@
     box-shadow: 0 0 900px 13.5px #0e72af;
     border-radius: 45px;
 }
+
 .togglebtn {
     padding: 15px 45px;
     cursor: pointer;
@@ -35,6 +40,7 @@
     position: relative;
     left: 15px
 }
+
 #btn {
     top: 0;
     left: 0;
@@ -45,12 +51,14 @@
     border-radius: 45px;
     transition: .5s;
 }
+
 .input-group {
     top: 270px;
     position: absolute;
     width: 420px;
     transition: .5s;
 }
+
 .input-field {
     width: 100%;
     padding: 15px 0;
@@ -60,6 +68,7 @@
     outline: none;
     background: transparent;
 }
+
 .submit {
     width: 85%;
     padding: 15px 45px;
@@ -72,15 +81,36 @@
     outline: none;
     border-radius: 45px;
 }
+
 span {
     color: #777;
     font-size: 18px;
     bottom: 102px;
     position: absolute;
 }
+
 #login {
     left: 75px;
 }
+
 #register {
     left: 670px;
+}
+
+/* Remove arrows */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.error {
+    margin-top: 15px;
+    font-size: 15px;
 }
